added function that detects window resize - responsive function - design still not responsive

--- a/public/index.html
+++ b/public/index.html
@@ -77,6 +77,17 @@ display: none;
   {
     alert("redirection");
   }
+
+counter=0;
+window.onresize=function()
+  {
+++counter;
+message1="resized for the ";
+message2=" time";
+message=message1+counter+message2;
+console.log(message);
+  }
+
 </script>
 
 
