resize function shows window size on resize - design still non responsive

--- a/public/index.html
+++ b/public/index.html
@@ -83,8 +83,9 @@ window.onresize=function()
   {
 ++counter;
 message1="resized for the ";
-message2=" time";
-message=message1+counter+message2;
+message2=" time; window size : ";
+message3=window.innerWidth +" x "+ window.innerHeight ;
+message=message1+counter+message2+message3;
 console.log(message);
   }
 
