progressed in design, preparing for responsive design- still not responsive

--- a/public/index.html
+++ b/public/index.html
@@ -87,6 +87,10 @@ message2=" time; window size : ";
 message3=window.innerWidth +" x "+ window.innerHeight ;
 message=message1+counter+message2+message3;
 console.log(message);
+/*
+//preparing bgresize
+document.getElementsByClassName('bgSize')[0].style="height:100px";
+*/
   }
 
 </script>
