preparing for responsive design to page 1 - still not responsive

--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,12 @@ console.log(message);
 /*
 //preparing bgresize
 document.getElementsByClassName('bgSize')[0].style="height:100px";
+document.getElementsByClassName('bgSize')[0].offsetHeight
 */
+//og means originals refers to the 100% Width x Height
+ogHeight=658;
+ogWidth=1325;
+//ogWidth+" x "+ogHeight;
   }
 
 </script>
